--- a/render.yaml
+++ b/render.yaml
@@ -6,10 +6,14 @@ services:
     startCommand: python bot.py
     envVars:
       - key: DISCORD_TOKEN
-        sync: false   # 之後在 Render 介面輸入
+        sync: false
       - key: GUILD_ID
         value: "你的伺服器ID"
       - key: ADMIN_ROLE_ID
-        value: "（可留空或填管理身分組ID）"
+        value: "0"
+      - key: GSHEET_ID
+        sync: false
+      - key: GOOGLE_CREDENTIALS_JSON
+        sync: false
       - key: PYTHONUNBUFFERED
         value: "1"
